# rundbat

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: mcp_guard.py  role_guard.py  (+4 more)
config/: rundbat.yaml
docker/: .env.example  Justfile  docker-compose.yml
docs/: rundbat-spec.md
tests/: conftest.py
tests/proj/: .dockerignore  .gitignore  CLAUDE.md  Justfile  app.py  pyproject.toml  test_app.py
tests/proj/.claude/: .rundbat-manifest.json  settings.json
tests/proj/.claude/agents/: deployment-expert.md
tests/proj/.claude/rules/: rundbat.md
tests/proj/.claude/skills/se/: SKILL.md
tests/proj/.claude/skills/todo/: SKILL.md
tests/proj/.github/workflows/: release.yml
tests/proj/config/: rundbat.yaml  sops.yaml
tests/proj/config/dev/: public.env  secrets.env
tests/proj/config/local/eric/: public.env  secrets.env
tests/proj/config/prod/: docker1.apps1.jointheleague.org.pub  proj-deploy-key  proj-deploy-key.pub  public.env  secrets.env
tests/proj/docker/: .env.example  Dockerfile  Justfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
tests/proj/docs/clasi/: .clasi.db
tests/proj/docs/clasi/architecture/: architecture-update-001.md
tests/proj/docs/clasi/design/: overview.md  specification.md  usecases.md
tests/proj/docs/clasi/sprints/001-flask-counter-app/: sprint.md
tests/proj/docs/clasi/sprints/001-flask-counter-app/tickets/done/: 003-redis-integration.md
tests/proj/docs/clasi/sprints/done/001-flask-counter-app/: sprint.md  usecases.md
tests/proj/docs/clasi/sprints/done/001-flask-counter-app/tickets/done/: 001-project-scaffolding.md  002-postgresql-integration.md  004-wire-up-routes-and-template.md
tests/proj/docs/clasi/todo/done/: flask-counter-app.md
tests/proj/docs/clasi/todo/in-progress/: flask-counter-app.md
tests/proj/scripts/: setup-config.sh
tests/proj/templates/: index.html
(+243 files in other folders)
