[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rundbat"
version = "0.20260411.1"
description = "Deployment Expert — Docker-based environment management CLI"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.scripts]
rundbat = "rundbat.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rundbat"]
artifacts = ["src/rundbat/content/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_docker: test requires Docker to be running",
    "requires_dotconfig: test requires dotconfig to be installed",
    "requires_remote_docker: test requires the student-docker1 Docker context",
    "requires_managed_db: test requires the managed DigitalOcean Postgres",
]

[dependency-groups]
dev = [
    "pytest",
    "psycopg[binary]",
    "flask",
    "redis",
]
