[project]
name = "proj"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dotconfig",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "rundbat",
]

[tool.uv.sources]
dotconfig = { path = "../../../../code-projects/dotconfig", editable = true }
rundbat = { workspace = true }
